--- a/www/index.html
+++ b/www/index.html
@@ -35,12 +35,15 @@ $(document).ready(function(){
 
 </script>
 <style>
+body {
+	background-color: silver;
+}
 td.nonfract {
     color: black;
-    background-color: grey;
+    background-color: white;
 }
 td.fract {
-    color: grey;
+    color: white;
     background-color: black;
 }
 </style></head>
