Removed nonfunctional fields

--- a/www/index.html
+++ b/www/index.html
@@ -141,10 +141,10 @@ div.footer {
 <tr><th>I</th><td class="nonfract" id="t10"/><td class="nonfract" id="t11"/><td class="nonfract" id="t12"/><td class="nonfract" id="t13"/><td class="nonfract" id="t14"/><td class="nonfract" id="t15"/><td class="fract" id="t16"/><td class="fract" id="t17"/><td class="fract" id="t18"/><td>kWh</td></tr>
 <tr><th>II</th><td class="nonfract" id="t20"/><td class="nonfract" id="t21"/><td class="nonfract" id="t22"/><td class="nonfract" id="t23"/><td class="nonfract" id="t24"/><td class="nonfract" id="t25"/><td class="fract" id="t26"/><td class="fract" id="t27"/><td class="fract" id="t28"/><td>kWh</td></tr>
 </table>
-<div id="delv1"></div>
+<!--div id="delv1"></div>
 <div id="delv2"></div>
 <div id="recv1"></div>
-<div id="recv2"></div>
+<div id="recv2"></div-->
 </fieldset>
 </td></tr>
 <tr><td>
