--- a/dsmrd/www/index.html
+++ b/dsmrd/www/index.html
@@ -9,8 +9,19 @@ function pad(num, size, decim) {
 	return s.substr(s.length - size);
 }
 
-$(document).ready(function(){
+$(document).ready(function() {
 		setInterval(function() {
+
+		$.getJSON('api/electricity/equipment', function(result){
+			$('#equipment').html(result);
+			}).fail(function() { $('#equipment').html('N/A'); });
+		$.getJSON('api/gas/equipment', function(result){
+			$('#device1_equipment').html(result);
+			}).fail(function() { $('#device1_equipment').html('N/A'); });
+		$.getJSON('api/gas/delivered', function(result){
+			$('#device1_delivered').html(result);
+			}).fail(function() { $('#device1_delivered').html('N/A'); });
+
 		$.getJSON('api/electricity/power/received', function(result){
 			$('#total_recv_power').show().html(pad(result, 9, 3));
 			}).fail(function() { $('#total_recv_power').html('N/A'); });
@@ -152,6 +163,19 @@ $(document).ready(function(){
 </table>
 </fieldset-->
 <fieldset>
+<legend>Equipment</legend>
+<table>
+  <tr>
+    <th>Electricity</th>
+    <td id="equipment"></td>
+  </tr>
+  <tr>
+    <th>Device #1</th>
+    <td id="device1_equipment"></td>
+  </tr>
+</table>
+</fieldset>
+<fieldset>
 <legend>Meters</legend>
 <table>
   <tr>
@@ -168,6 +192,11 @@ $(document).ready(function(){
     <th>II</th>
     <td id="delv2"></td>
     <td id="recv2"></td>
+  </tr>
+  <tr>
+    <th>Dev1</th>
+    <td id="device1_delivered"></td>
+    <td id="recv2">N/A</td>
   </tr>
 </table>
 </fieldset>
