--- a/dsmrd/www/index.html
+++ b/dsmrd/www/index.html
@@ -19,7 +19,7 @@ $(document).ready(function() {
 			$('#device1_equipment').html(result);
 			}).fail(function() { $('#device1_equipment').html('N/A'); });
 		$.getJSON('api/gas/delivered', function(result){
-			$('#device1_delivered').html(result);
+			$('#device1_delivered').html(pad(result, 9, 3));
 			}).fail(function() { $('#device1_delivered').html('N/A'); });
 
 		$.getJSON('api/electricity/power/received', function(result){
