Added additional fields

--- a/www/index.html
+++ b/www/index.html
@@ -30,10 +30,6 @@
 <th>Electricity</th>
 <td id="equipment"></td>
 </tr>
-<tr>
-<th>Device #1</th>
-<td id="device1_equipment"></td>
-</tr>
 </table>
 </fieldset>
 
@@ -55,9 +51,23 @@
 <td id="recv2"></td>
 </tr>
 <tr>
+<th>Indicator</th>
+<td id="indicator"></td>
 </tr>
 </table>
 </fieldset>
+
+<table>
+<tr><th>Version</th><td> <div id="version"></div></td></tr>
+<tr><th>Datetimestamp</th><td> <div id="datetimestamp"></div></td></tr>
+<tr><th>#Power failures</th><td> <div id="nof_power_failures"></div></td></tr>
+<tr><th>#Power long failures</th><td> <div id="nof_long_power_failures"></div></td></tr>
+<tr><th>Event log</th><td> <div id="power_fail_event_log"></div></td></tr>
+<tr><th>Voltage Sage</th><td> <div id="nof_voltage_sage_l1"></div></td></tr>
+<tr><th>Voltage swells</th><td> <div id="nof_voltage_swells_l1"></div></td></tr>
+<tr><th>Msg 0</th><td> <div id="text_message0"></div></td></tr>
+<tr><th>Msg 1</th><td> <div id="text_message1"></div></td></tr>
+</table>
 
 <fieldset><legend>Instantaneous power</legend>
 <table summary="">
