Cleanup of web page

--- a/www/index.html
+++ b/www/index.html
@@ -30,12 +30,12 @@
 <th>Electricity</th>
 <td id="equipment"></td>
 <tr><th>Version</th><td> <div id="version"></div></td></tr>
-<tr><th>Datetimestamp</th><td> <div id="datetimestamp"></div></td></tr>
+<tr><th>Timestamp</th><td> <div id="datetimestamp"></div></td></tr>
 <tr><th>#Power failures</th><td> <div id="nof_power_failures"></div></td></tr>
 <tr><th>#Power long failures</th><td> <div id="nof_long_power_failures"></div></td></tr>
-<tr><th>Event log</th><td> <div id="power_fail_event_log"></div></td></tr>
-<tr><th>Msg 0</th><td> <div id="text_message0"></div></td></tr>
-<tr><th>Msg 1</th><td> <div id="text_message1"></div></td></tr>
+<!--tr><th>Event log</th><td> <div id="power_fail_event_log"></div></td></tr-->
+<tr><th>Message</th><td> <div id="text_message0"></div></td></tr>
+<!--tr><th>Msg 1</th><td> <div id="text_message1"></div></td></tr-->
 </tr>
 </table>
 </fieldset>
